--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -20,73 +20,72 @@
     </div>
 <!-- div that will display the map that is set using below javascript -->
     <div id="map"></div>
-    
-    <div class="detail-col">
-        <table>
-            <thead>
-                <td><h4><%= @address.address %></h4>
-                <hr></hr></td>
-                
-            </thead>
-            <tr>
-                <td class="risk risk-title">Risk of this location:</td>
-            </tr>
-            <tr>
-                <% if @risk_level %>    
-                  <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>
-                  </td>
-                <% else %>
-                  <td class="risk">No risk data is available at this location</td>
-                <% end %>
-            </tr>
-            <tr>
-                <td class="note">
-                    <a href="#" id="map-pop" data-content="<strong> About Risk Level </strong><br>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
-                    Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
-                    The FIS quantifies potential fire intensity based on high to extreme weather 
-                    conditions, fuels, and topography." class="note">About Risk Level</a>
-                    <!--<a href="#" class="tooltip"> About Risk Level <span> 
-                    <img class="callout" src="/assets/callout.png" /> 
-                    <strong> About Risk Level </strong>
-                    <br /> 
-                    The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
-                    Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
-                    The FIS quantifies potential fire intensity based on high to extreme weather 
-                    conditions, fuels, and topography. </span> </a>  
-                    <span> 
-                    <img class="callout" src="/assets/callout.png" /> -->
-                    &#124;
-                <a href="http://www.texaswildfirerisk.com/Map" target="blank">go to TxWRAP site</a>
-                </td> 
-            </tr>        
-           <!-- <tr>
-                <td colspan="2" class="note">See more about your risk level, here.</td>
-            </tr>-->
-            <tr>
-                <td><span class="condition-type">Wind: </span><span class="condition"><%= @wind_conditions %></span></td>
-            </tr>
-            <tr>
-                <td><span class="condition-type">Humidity:</span><span class="class="condition"> <%= @relative_humidity %></span></td>
-            </tr>
-            <tr>
-                <td><span class="condition-type">Inside of a Burn Ban: </span><span class="class="condition"> <%= @inside_burnban %></span></td>
-            </tr>        
-        </table>
-
-
-<!--      <table id="table-map">
-            <tr>
-                <td class="condition-type">Distance to fire station:</td>
-                <td class="condition"> <%= @distance %> miles</td>
-            </tr> -->
+            <div class="detail-col">
+                <table>
+                    <thead>
+                        <td><h4><%= @address.address %></h4>
+                        <hr></hr></td>
+                        
+                    </thead>
+                    <tr>
+                        <td class="risk risk-title">Risk of this location:</td>
+                    </tr>
+                    <tr>
+                        <% if @risk_level %>    
+                          <td class="risk risk-<%= @risk_level %>"><%= @risk_text %>
+                          </td>
+                        <% else %>
+                          <td class="risk">No risk data is available at this location</td>
+                        <% end %>
+                    </tr>
+                    <tr>
+                        <td class="note">
+                            <a href="#" id="map-pop" data-content="<strong> About Risk Level </strong><br>The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+                            Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
+                            The FIS quantifies potential fire intensity based on high to extreme weather 
+                            conditions, fuels, and topography." class="note">About Risk Level</a>
+                            <!--<a href="#" class="tooltip"> About Risk Level <span> 
+                            <img class="callout" src="/assets/callout.png" /> 
+                            <strong> About Risk Level </strong>
+                            <br /> 
+                            The risk level is supplied by the Texas Forest Service Wildfire Risk Assessment 
+                            Portal (TxWRAP), which uses the Fire Intensity Scale (FIS). 
+                            The FIS quantifies potential fire intensity based on high to extreme weather 
+                            conditions, fuels, and topography. </span> </a>  
+                            <span> 
+                            <img class="callout" src="/assets/callout.png" /> -->
+                            &#124;
+                        <a href="http://www.texaswildfirerisk.com/Map" target="blank">go to TxWRAP site</a>
+                        </td> 
+                    </tr>        
+                   <!-- <tr>
+                        <td colspan="2" class="note">See more about your risk level, here.</td>
+                    </tr>-->
+                    <tr>
+                        <td><span class="condition-type">Wind: </span><span class="condition"><%= @wind_conditions %></span></td>
+                    </tr>
+                    <tr>
+                        <td><span class="condition-type">Humidity:</span><span class="class="condition"> <%= @relative_humidity %></span></td>
+                    </tr>
+                    <tr>
+                        <td><span class="condition-type">Inside of a Burn Ban: </span><span class="class="condition"> <%= @inside_burnban %></span></td>
+                    </tr>        
+                </table>
+            </div>
             <% unless user_signed_in? %>
-          <h4>
-              <br>
-              <br>
-              Want to get started?
-          </h4>
-            <a href="users/sign_up"><button class="btn btn-info btn-large">sign up now >></button></a>
-            <% end %>
+                <div class="detail-col">
+                  <h4>
+                      Join prepared.ly &mdash; it's free!
+                  </h4>
+                    <a href="users/sign_up"><button class="btn btn-info btn-large"> <i class="icon-user icon-white"></i> sign up now </button></a>
+                 </div>   
+             <% end %>
+             <div class="detail-col">
+                  <h4>
+                      Want to start getting more prepared <em>right now</em>?
+                  </h4>
+                    <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
+            </div>   
       </div>
     </div>  
 <!--
