--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -1,3 +1,4 @@
+<div class="main-col">
 <h2>Thanks for signing up! Please tell others about prepared.ly</h2>
 
 <br/>
@@ -38,7 +39,17 @@ Share Link: <input size=35 value="http://www.prepared.ly/?ref=<%= @share_code %>
   <!-- Twitter Setup-->
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <% end %>
-
+<br>
+</div>
+<div class="detail-col">
+     <h4>
+        <br>
+          Want to start getting more prepared <em>right now</em>? 
+    </h4>
+    <br>
+    <a href="/tasks"><button class="btn btn-success btn-large"> <i class="icon-fire icon-white"></i> Get started! </button></a>
+    <br>
+</div>
 <!--
 Contact AFD
 -->
