--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -56,21 +56,11 @@
                 <p>Review nationally accepted safety standards before making home and property improvements.
                 </p>     
             <p>
-            <a href="../map"><button class="button blue signup big">Check it out!</button></a>
+            <a href="../map"><button class="btn btn-success btn-large"><i class="icon-map-marker icon-white"></i> Check it out!</button></a>
             </p>           
         </div>  
      </div> <!--end column-full-->    
 </div> <!--end column wrapper-->
-
-
-
-
-
-
-
-
-
-
 <div id="about-bg">
     </div>
         
