--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
         <%= f.password_field :password_confirmation %>
     </div>
     <div>
-        <%= f.submit "Sign Up", :class => 'btn btn-primary' %>
+        <%= f.submit "Sign Up", :class => 'btn btn-info' %>
     </div>
     <% end %>
     <%= render "links" %>
