--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -6,10 +6,11 @@
       <meta name="viewport" content="width=device-width,initial-scale =1, user-scalable = no" />
       <%= stylesheet_link_tag    "application", :media => "all" %>
       <%= yield :stylesheet_yield %>
+        <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
+        <%= stylesheet_link_tag    "application", :media => "all" %>
       <%= yield :fb_og_tags %>
       <%= stylesheet_link_tag "mobile", :media => "all and (max-width: 800px)" %>
       <%= javascript_include_tag "application" %>
-    
       <%= csrf_meta_tags %>
       <!-- Google Analytics -->
         <script type="text/javascript">
