Contact form text email and contact form disclaimer

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New contact</h1>
+<h1>Contact a Wildfire Prevention Expert</h1>
+
+<h2>Submit questions and receive answers unique to your property or situation,<br />
+Schedule on-site consultations with wildfire prevention experts,<br />
+and work with experts to make your neighborhood Firewise.</h2>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', contacts_path %>
+<br />
+In the spirit of protecting our community, questions you submit may be posted, anonymously, along with the fire department's response, in a knowledge base on a future version of Prepared.ly.
