--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="actions" >
+    <%= f.submit "Submit", :class => "btn btn-success btn" %>
   </div>
 <% end %>
