--- a/app/views/user_mailer/contact_form.text.erb
+++ b/app/views/user_mailer/contact_form.text.erb
@@ -1,3 +1,8 @@
 Submission from prepared.ly
 ===============================================
- 
+A Prepared.ly user just submitted a question:
+   
+<%= @contact.name %>">
+<%= @contact.email %>">
+<%= @contact.subject %>">
+<%= @contact.body %>">
