add button class to new task back link

--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -3,4 +3,4 @@
 <!--<% render 'form' %>-->
 
 <br>
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back', tasks_path, :class => "btn-inverse btn" %>
