--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -3,7 +3,7 @@
                 <div class="controls">
                     <div class="input-append">
                         <%= text_field_tag(:q, nil,  :placeholder => 'enter your address in Texas here', :class => 'form-inline input-xx-large') %><%= submit_tag("Go", :class => 'btn btn-info btn') %>
-                        <br><span class="help-inline note"> Include city and state, only available for the state of Texas.</span>
+                        <br><span class="help-inline note"> Include city and state, currently only available for the state of Texas.<br />Please note that Prepared.ly is <strong>not</strong> an emergency notification tool.</span>
                     </div>
                 </div>
             <% end %>
