add terms link to footer and routes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,8 @@
 				</div>
 				<div class="column-3">
 				<p> contact us: <a href="mailto:info@prepared.ly">info@prepared.ly</a></br>
-						check out our resources, </br>and partners, <a href="../resources">here</a>.
+						check out our resources, </br>and partners, <a href="../resources">here</a>.</br></br>  
+            review our terms of use <a href="../terms">here</a>
 					</p>
 				</div>
 				<div class="column-3">
