add terms link to about page

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -43,7 +43,8 @@
                 </p>
             <h2>Get started!</h2>
                 <p>Prepare your home and property with simple tasks suggested by wildfire prevention experts.
-                </p>     
+                </p> 
+                <p>Review our terms of use <a href="../terms">here</a></p>    
         </div>
         <div class="column">
             <h2>Sharing</h2>
