open terms link from sign up page in new window

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
         <%= f.label :password_confirmation %>*<br />
         <%= f.password_field :password_confirmation %>
     </div>
-    <h5><a href="../terms">Please review our registration and use policy</a></h5>
+    <h5><a href="../terms" target="_BLANK">Please review our registration and use policy</a></h5>
     <div>
         <%= f.submit "Sign Up", :class => 'btn btn-info' %>
     </div>
