--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -23,7 +23,7 @@ Contact AFD
                 <p>If you live in an at-risk area or WUI, becoming a Firewise Community makes a big difference in insuring your area is safer. Learn about other Firewise Communities, organize a Firewise Day, create a community action plan and more.
                 <br />
                 <br />
-                <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="contacts/new">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
+                <a href="http://www.firewise.org/Communities/USA-Recognition-Program/Program-criteria.aspx">Get started here</a> on the five steps to becoming a Firewise community. For step 1, contact <a href="../contacts/new">Austin Fire Department</a> or your <a href="http://submissions.nfpa.org/firewise/fw_state_liaisons.php">state liaison</a> if you're in a different area.</p>
         </div>
     </div><!--end column-full-->    
 
@@ -40,7 +40,7 @@ Contact AFD
         </div>
         <div class="column reg">
             <h2>Contact AFD</h2>
-                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="contacts/new">Ask a question here</a>.
+                <p>Wildfire Prevention expert Lt. Josh Portie and other specialists at AFD are available to answer brief questions and coordinate on-site & neighborhood visits in the Austin area. <a href="../contacts/new">Ask a question here</a>.
                 </p>   
         </div>  
      </div> <!--end column-full-->    
