fix stupid extra quotation mark in text mailer

--- a/app/views/user_mailer/contact_form.text.erb
+++ b/app/views/user_mailer/contact_form.text.erb
@@ -2,7 +2,7 @@ Submission from prepared.ly
 ===============================================
 A Prepared.ly user just submitted a question:
    
-<%= @contact.name %>">
-<%= @contact.email %>">
-<%= @contact.subject %>">
-<%= @contact.body %>">
+<%= @contact.name %>
+<%= @contact.email %>
+<%= @contact.subject %>
+<%= @contact.body %>
