--- a/app/views/user_mailer/contact_form.html.erb
+++ b/app/views/user_mailer/contact_form.html.erb
@@ -7,10 +7,10 @@
     <p><%= image_tag attachments['preparedly-red.png'].url -%></p>
     <p><h2>A Prepared.ly user just submitted a question:</h2></p>
     <ol>
-      <li><p><%= @contact.name %></li>
-      <li><p><%= @contact.email %></li>
-      <li><p><%= @contact.subject %></li>
-      <li><p><%= @contact.body %></li>
+      <li><p><%= @name %></li>
+      <li><p><%= @email %></li>
+      <li><p><%= @subject %></li>
+      <li><p><%= @body %></li>
     </ol>
 
   </body>
