--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -45,6 +45,7 @@
                 </ul>
             </div>
 <!-- end Navgation -->
+<div class="container">
     <div id="about-green">
         <div id="about-wrap">
                     <div id="about-main">
@@ -54,6 +55,8 @@
         <div id="skyline">
         </div>
     </div>
+  </div>
+</div>    
     <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <%= yield :javascript_yield %>
