--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-<div id="wrap">
+<div class="container">
     <div id="main-wrap">
         <div id="beta">
         </div>
@@ -50,17 +50,22 @@
 		<div id="footer-main">
 			<div class="column-wrapper">
 				<div class="column-3">
-					<a href="http://www.codeforamerica.org"><img title="cfa austin" src="/assets/cfaaustin.png"></a>
+					<a href="http://www.austintexas.gov/department/fire">
+					<img title="Austin Fire Department" src="/assets/afd.png" height=200px width=200px>
+					</a>
 				</div>
 				<div class="column-3">
-				<p> contact us: <a href="mailto:info@prepared.ly">info@prepared.ly</a></br>
-						check out our resources, </br>and partners, <a href="../resources">here</a>.
-					</p>
-				</div>
-				<div class="column-3">
-					<a href="http://austintexas.gov/"><img title="austin" src="/assets/austin.png"></a>
-				</div>
 
+					<a href="http://www.codeforamerica.org">
+					<img title="cfa austin" src="/assets/cfaaustin.png">
+					</a>
+				<!--<div class="center"> contact us: <a href="mailto:info@prepared.ly">info@prepared.ly</a></br>
+						check out our resources, </br>and partners, <a href="../resources">here</a>.
+					</div>-->
+				</div>
+				<div class="column-3">
+					<a href="http://austintexas.gov/"><img title="austin" src="/assets/austin.png" height=200px width=200px></a>
+				</div>
 			</div>
 		</div>
 	</div>
