show all the firestations on the map, with a toggle checkbox. added bad firestation marker :) graphic_skills--;

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -255,6 +255,11 @@ td { vertical-align: top; }
 	margin-top: 1px;
 }
 
+#map-controls{ 
+  float:left;
+  width:60%;
+  position:relative;
+}
 .main-col {
 	/*border: #3AAFBF solid thin;*/
 	min-width: 325px;
