--- a/app/views/map/get.html.erb
+++ b/app/views/map/get.html.erb
@@ -17,7 +17,7 @@
             <p>
             We don’t want that to happen to you. We’ve developed an easy-to-use application that brings together a variety of checklists and fire tools, and gives them to you in a manageable, timely, and actionable form.
             <p>
-            <a href="/about"><button class="btn btn-info btn-large"><i class="icon-info-sign icon-white"></i> Read more about prepared.ly >></button></a>
+            <%= link_to '<i class="icon-info-sign icon-white"></i> Read more about prepared.ly >>'.html_safe,  about_path, :class => 'btn-large btn-info btn' %>
             </br>
         </div>
         <div class="column reg">
