--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,7 +176,13 @@ td { vertical-align: top; }
     list-style: none outside none;
     margin: 0;
 }
-
+.navbar .nav {
+    display: block;
+    float: right;
+    left: 0;
+    margin: 0 10px 0 0;
+    position: relative;
+}
 .navbar-items li {
 	display: inline;
 	list-style-type: none;
@@ -186,14 +192,20 @@ td { vertical-align: top; }
 	font-style: normal;
 	font-weight: 700;
 }
-.navbar-items a{ 
+/*.navbar-items a{ 
 	color: #ffffff; 
 	text-decoration:none;
 	}
 .navbar-items a:visited { 
 	color: #ffffff; 
 		text-decoration:none;
-}
+}*/
+.navbar .dropdown-menu:before {
+	display:none;
+	}
+.navbar .dropdown-menu:after {
+	display:none;
+	}	
 navbar .nav {
     display: block;
     float: right;
@@ -210,7 +222,7 @@ navbar .nav {
     position: absolute;
     top: 0;
     width: 100px;
-    z-index: 5;
+    z-index: 500000;
 }
  .notice, .alert {
  	height: 0px;
@@ -220,7 +232,7 @@ navbar .nav {
 	height:100px;
 	width:200px;
 	position: relative;
-	top: 50px;
+	top: 75px;
 	left: 45px;
 	z-index:100;
 }
@@ -597,8 +609,13 @@ a.tooltip:hover span{
 	color: #99cccc;
     margin: 38px 0 0 60px;
     }	
-#container {min-height: 100%;}
-
+#container {
+	min-height: 100%;
+	}
+#main {
+	margin-bottom:200px;
+	}
+}
 #main-wrap {
 	overflow:hidden;
 	padding-bottom: 180px;
