--- a/app/views/layouts/about_layout.html.erb
+++ b/app/views/layouts/about_layout.html.erb
@@ -29,8 +29,10 @@
 
     </head>
 <body data-spy="scroll" data-target=".subnav" data-offset="100">
-<div id="beta">
-</div>
+<div class="container">
+  <div id="main-wrap">
+    <div id="beta">
+    </div>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -59,6 +61,8 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
 <!-- end Navgation -->
 <div class="container">
     <div id="about-green">
