--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,47 +12,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body data-spy="scroll" data-target=".subnav" data-offset="100">
-<div id="beta">
-</div>
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button"class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <!-- Navgation -->
-            <div class="nav-collapse collapse">
-                <!--Upper NAVIGATION!-->
-                <ul class="nav navbar-items">
-                	<li class=""><a href="/"> home</a></li>
-					<li><%= link_to "learn", resources_path %></li> 
-					<li><%= link_to "about", about_path %></li>
-					<li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" href="#">account <b class="caret"></b></a>
-                      <ul class="dropdown-menu">
-						<li><%= render 'devise/menu/registration_items' %></li>
-						<li><%= render 'devise/menu/login_items' %></li>
-                      </ul>
-                    </li>
-                </ul>
+<div class="container">
+  <div id="main-wrap">
+      <% if user_signed_in? %>
+           <%= render "layouts/navigation" %>
+         <% else %>
+           <%= render "layouts/usernavigation" %>
+      <% end %>
+      <div id="beta">
+      </div>   
+      <% unless user_signed_in? %>
+        <div id="logo-wrapper">
+          <a href="/">
+            <div id="logo" title="preparedly">
             </div>
+          </a>
         </div>
+      <% end %>   
+      <div id="main">
+          <%= yield %>
       </div>
-    </div>
-<!-- end Navgation -->
-            
-            <div id="logo-wrapper">
-              <a href="/">
-                <div id="logo" title="preparedly">
-                </div>
-              </a>
-              </div>
-            <div id="main">
-                <%= yield %>
-            </div>
-    </div>
+  </div>
 </div>
 <div id="footer">
 	<div id="footer-green">
